--- a/web-app/package.json
+++ b/web-app/package.json
@@ -5,20 +5,22 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "check": "next lint && tsc --noEmit",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "dev": "next dev --turbo",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "fix": "run-p fix:*",
+    "fix:prettier": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "fix:eslint": "next lint --fix",
+    "lint": "run-p lint:*",
+    "lint:eslint": "next lint",
+    "lint:tsc": "tsc --noEmit",
+    "lint:knip": "knip",
+    "lint:prettier": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "preview": "next build && next start",
-    "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "start": "next start"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -48,6 +50,8 @@
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
+    "knip": "^5.63.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-classnames": "^0.8.2",
