--- a/web-app/package.json
+++ b/web-app/package.json
@@ -13,9 +13,9 @@
     "postinstall": "prisma generate",
     "fix": "run-p fix:*",
     "fix:prettier": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "fix:eslint": "next lint --fix",
+    "fix:eslint": "eslint --fix .",
     "lint": "run-p lint:*",
-    "lint:eslint": "next lint",
+    "lint:eslint": "eslint .",
     "lint:tsc": "tsc --noEmit",
     "lint:knip": "knip",
     "lint:prettier": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
@@ -50,6 +50,7 @@
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "knip": "^5.63.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.3",
