--- a/web-app/package.json
+++ b/web-app/package.json
@@ -34,9 +34,11 @@
     "clsx": "^2.1.1",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
+    "otpauth": "^9.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-qr-code": "^2.0.18",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
