--- a/web-app/package.json
+++ b/web-app/package.json
@@ -38,6 +38,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-qr-code": "^2.0.18",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
