--- a/web-app/package.json
+++ b/web-app/package.json
@@ -32,6 +32,7 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "otpauth": "^9.4.1",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
