--- a/ws-server/package.json
+++ b/ws-server/package.json
@@ -2,6 +2,9 @@
   "name": "ws-server",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun --watch index.ts"
+  },
   "private": true,
   "devDependencies": {
     "@types/bun": "latest"
